# Immanuel-MCP-server

./: .gitignore  README.md  __init__.py  api.py  chart-service.py  chart_service.py  claude-config.json  cli.py  docker.yml  dockerfile.txt  examples.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  setup.bat  setup.sh  summary.md  test.py  utils.py
immanuel_mcp/: __init__.py  settings.py  utils.py
tests/: test_interpretation.py
